--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,88 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
 .description {
-  text-align: center;
+  color: #828c96;
+  margin-top: 0;
+  padding-bottom: 3rem;
+  line-height: 1.59;
+  font-size: 1.51rem;
+  font-weight: 400;
+  margin-bottom: 2.4rem;
+  border-bottom: 1px solid #dce6f0;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.header2 {
+  font-size: 2rem;
+  margin-bottom: 2.4rem;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.post {
+  margin-bottom: 4.1rem;
+  border-bottom: 1px solid #dce6f0;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+.post__title {
+  font-size: 2.7rem;
+  font-weight: 400;
+  margin-bottom: 0.5rem;
+  position: relative;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+.post__title::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0.2rem;
+  background-color: #19232d;
+  transform: scale(0);
+  transform-origin: center;
+  transition: transform 300ms;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.post__title:hover::after,
+.post__title:focus::after {
+  transform: scale(1);
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.post__info {
+  font-size: 1.4rem;
+  font-family: "Inter", monospace;
+  line-height: 1.75;
+  color: #828c96;
+  margin-top: 0;
+  margin-bottom: 0.6rem;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.post__text {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  line-height: 1.59;
+  font-size: 1.51rem;
+  font-weight: 400;
+  text-align: justify;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.grey {
+  color: #828c96;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.grey:hover {
+  color: black;
+}
+
+.page_button.active {
+  background-color: #19232d;
+  color: #dce6f0;
+}
+
+.page_button {
+  margin-right: 0.8rem;
+  background-color: #dce6f0;
+  color: #19232d;
+  padding: 0.35rem 0.9rem;
+  font-family: "Inter", monospace;
+  border-radius: 0.4rem;
+  font-size: 1.15rem;
+  border: none;
+  cursor: pointer;
 }
