--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Helevetica Neue", sans-serif;
+  font-size: 10px;
+  color: #19232d;
+  background-color: #fdfdfd;
 }
 
 a {
@@ -13,4 +15,11 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+blockquote {
+  background-color: #ff7e7e;
+  color: white;
+  padding: 1rem;
+  border-radius: 12px;
 }
