--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -85,3 +85,9 @@
     display: none;
   }
 }
+
+@media screen and (min-width: 440px) {
+  .hamburgerMenu.hamburgerMenu_active {
+    display: none;
+  }
+}
